--- a/k8s/dockercoins.yaml
+++ b/k8s/dockercoins.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: hasher
+        security: namespace
     spec:
       containers:
       - image: dockercoins/hasher:v0.1
@@ -49,6 +50,7 @@ spec:
     metadata:
       labels:
         app: redis
+        security: namespace
     spec:
       containers:
       - image: redis
@@ -84,6 +86,7 @@ spec:
     metadata:
       labels:
         app: rng
+        security: namespace
     spec:
       containers:
       - image: dockercoins/rng:v0.1
@@ -119,6 +122,7 @@ spec:
     metadata:
       labels:
         app: webui
+        security: public
     spec:
       containers:
       - image: dockercoins/webui:v0.1
@@ -154,6 +158,7 @@ spec:
     metadata:
       labels:
         app: worker
+        security: private
     spec:
       containers:
       - image: dockercoins/worker:v0.1
